# pifm

./: .gitignore  LICENSE  README.md  aggregate_data.py  calibration.py  config.py  contract.py  model.py  pyproject.toml  tokenize_data.py  train.py  validate.py
sources/: __init__.py  _common.py  dip.py  intact.py  literature_affinity.py  negatome.py  ppb_affinity.py  skempi.py  source_types.py  string_db.py
